objects/Reservation__c.object
<CustomObject>
    <description>All informations about reserved rooms and associated guests.</description>
    <fields>
        <fullName>Number_of_Assigned_Guests__c</fullName>
        <label>Number of Assigned Guests</label>
        <summaryForeignKey>Registered_Guest__c.Reservation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Reserved_Rooms__c</fullName>
        <label>Number of Reserved Rooms</label>
        <summaryForeignKey>Reserved_Room__c.Reservation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Reservation_Begin__c</fullName>
        <label>Reservation Begin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reservation_End__c</fullName>
        <label>Reservation End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Reservation_Cost__c</fullName>
        <label>Total Reservation Cost</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Reservation_Begin__c</columns>
        <columns>Reservation_End__c</columns>
        <columns>Number_of_Assigned_Guests__c</columns>
        <columns>Number_of_Reserved_Rooms__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RN-{000000}</displayFormat>
        <label>Reservation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>